Removing additional fmri components, and leaving out resampling and confounds for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,7 +78,7 @@ all =
     %(tests)s
 
 [options.package_data]
-fmriprep =
+petprep =
     data/*.json
     data/*.nii.gz
     data/*.mat
@@ -95,13 +95,13 @@ fmriprep =
 
 [options.entry_points]
 console_scripts =
-    fmriprep=fmriprep.cli.run:main
+    petprep=fmriprep.cli.run:main
 
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = fmriprep/_version.py
-versionfile_build = fmriprep/_version.py
+versionfile_source = petprep/_version.py
+versionfile_build = petprep/_version.py
 tag_prefix =
 parentdir_prefix =
 
