--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ classifiers =
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
-description = fMRIPrep is a robust and easy-to-use pipeline for preprocessing of diverse fMRI data.
+description = PETPrep is a robust and easy-to-use pipeline for preprocessing of diverse PET data.
 license = Apache License, Version 2.0
 long_description = file:long_description.rst
 long_description_content_type = text/x-rst; charset=UTF-8
@@ -31,7 +31,6 @@ install_requires =
     psutil >= 5.4
     pybids >= 0.12.1
     requests
-    sdcflows ~= 2.0.9
     smriprep ~= 0.8.0
     tedana ~= 0.0.9
     templateflow >= 0.6
@@ -95,7 +94,7 @@ petprep =
 
 [options.entry_points]
 console_scripts =
-    petprep=fmriprep.cli.run:main
+    petprep=petprep.cli.run:main
 
 [versioneer]
 VCS = git
