--- a/setup.cfg
+++ b/setup.cfg
@@ -23,9 +23,9 @@ url = https://github.com/nipreps/fmriprep
 python_requires = >=3.7
 install_requires =
     nibabel >= 3.0
-    nipype >= 1.5.1
+    nipype ~= 1.8.1
     nitransforms ~= 21.0.0
-    niworkflows ~= 1.4.5
+    niworkflows @ git+https://github.com/nipreps/niworkflows.git@master
     numpy
     pandas
     psutil >= 5.4
